--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="Keywords"
         content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title"
-        content="The Stellar | Emerging leader in X-Ray,Photocopiers(MFPs),Printers,Covid 19 Solutions and HP Series(EPABX) ">
+        content="The Stellar | One Stop solution that Builds great experiences for your brand ">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -224,7 +224,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images\blog2.jpg" width="1600" height="400" alt="Responsive image">
+                <img src="images1\blog2.jpg" width="1600" height="400" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h1>Experiences Matters.</h1>
@@ -255,7 +255,7 @@
 
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images\2.jpg" alt="Resposive image">
+                        <img class="bd-placeholder-img" width="250" height="300" src="images1\2.jpg" alt="Resposive image">
                     </div>
                 </div>
             </div>
