--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
     </div-->
 
     <div class="banner">
-        <img src="images\color bg.jpg" alt="The Stellar" width="1600" height="400">
+        <img src="images1\color bg.jpg" alt="The Stellar" width="1600" height="400">
         <div class="text">
             <h1>The Stellar</h1>
         </div>
