--- a/photocopier.html
+++ b/photocopier.html
@@ -365,7 +365,7 @@
             </div>
 
         </div>
-        <a class="nav-link" href="/office.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="nav-link" href="/companysite/office.html"><h3 class="text-dark">Back</h3> </a>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
