--- a/blog.html
+++ b/blog.html
@@ -276,7 +276,7 @@
             <br>
 
         </div>
-        <a class="nav-link" href="/index.html">
+        <a class="nav-link" href="/companysite/index.html">
             <h3 class="text-dark">Back</h3>
         </a>
 
