--- a/events.html
+++ b/events.html
@@ -253,7 +253,7 @@
                 </div>
             </div>
 
-        <a class="nav-link" href="/index.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="nav-link" href="/comapanysite/index.html"><h3 class="text-dark">Back</h3> </a>
     </div>
 
     
