--- a/culture.html
+++ b/culture.html
@@ -286,7 +286,7 @@
                 <div class="clearfix"></div><br>
                 
             </div>
-            <a class="nav-link" href="/about.html">
+            <a class="nav-link" href="/companysite/about.html">
                 <h3 class="text-dark">Back</h3>
             </a>
         </div>
