--- a/careers.html
+++ b/careers.html
@@ -281,7 +281,7 @@
            
         </div>
         <div class="clearfix"></div><br>
-        <a class="nav-link" href="/about.html">
+        <a class="nav-link" href="/companysite/about.html">
             <h3 class="text-dark">Back</h3>
         </a>  
         
