--- a/office.html
+++ b/office.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | Emerging leader </title>
+    <title>THE STELLAR | Office Solutions </title>
 </head>
 
 <body>
