--- a/printers.html
+++ b/printers.html
@@ -240,7 +240,7 @@
                 <h4 class="featurette-heading">Business Inkjet Printers </h4>
                 <p ><strong>Stellar</strong>  business inkjet printers deliver amazing quality, blazing-fast speeds, exceptional reliability and dependable performance to meet your business needs.
                 </p>
-                <a href="/businessprinters.html" class="btn btn-success ">Explore more Printers</a>
+                <a href="/companysite/businessprinters.html" class="btn btn-success ">Explore more Printers</a>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg 
