--- a/printers.html
+++ b/printers.html
@@ -247,7 +247,7 @@
 mx-auto" width="400" height="200" src="images1/p2.jpg" class="img-fluid">
             </div>
         </div>
-
+  <a class="nav-link" href="/companysite/index.html"><h3 class="text-dark">Back</h3> </a>
         <div class="clearfix"></div><br>
     </div>
 </body>
