--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark  bg-dark navbar-hover">
-        <a class="navbar-brand" href="/companysite/index.html">THE STELLAR</a>
+        <a class="navbar-brand" href="/index.html">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
             <span class="navbar-toggler-icon"></span>
@@ -171,11 +171,11 @@
                         <li><a class="dropdown-item dropdown-toggle" href="#">Telephony and Unified
                                 Communication</a>
                             <ul class="dropdown-menu ">
-                                <li> <a class="dropdown-item" href="/unified.html"> Unified Communication</a>
+                                <li> <a class="dropdown-item" href="/companysite/unified.html"> Unified Communication</a>
                             </ul>
 
                         </li>
-                        <li> <a class="dropdown-item" href="/hp.html">HP Series (EPABX) </a></li>
+                        <li> <a class="dropdown-item" href="/companysite/hp.html">HP Series (EPABX) </a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
