--- a/printers.html
+++ b/printers.html
@@ -171,11 +171,11 @@
                         <li><a class="dropdown-item dropdown-toggle" href="#">Telephony and Unified
                                 Communication</a>
                             <ul class="dropdown-menu ">
-                                <li> <a class="dropdown-item" href="/unified.html"> Unified Communication</a>
+                                <li> <a class="dropdown-item" href="/companysite/unified.html"> Unified Communication</a>
                             </ul>
 
                         </li>
-                        <li> <a class="dropdown-item" href="/hp.html">HP Series (EPABX) </a></li>
+                        <li> <a class="dropdown-item" href="/companysite/hp.html">HP Series (EPABX) </a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -207,7 +207,7 @@
             </ul>
             <div class="form-inline ml-auto">
                 <form class="form-inline  my-2 my-lg-0">
-                    <a href="/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
+                    <a href="/companysite/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
                 </form>
             </div>
         </div>
@@ -217,21 +217,17 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images1/p1.jpg"
+                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="/images1/p1.jpg"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h1>Printers</h1>
-
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
     <div class="container my-4">
@@ -244,7 +240,7 @@
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg 
-mx-auto" width="400" height="200" src="images1/p2.jpg" class="img-fluid">
+mx-auto" width="400" height="200" src="/images1/p2.jpg" class="img-fluid">
             </div>
         </div>
   <a class="nav-link" href="/companysite/index.html"><h3 class="text-dark">Back</h3> </a>
