--- a/photocopier.html
+++ b/photocopier.html
@@ -171,11 +171,11 @@
                         <li><a class="dropdown-item dropdown-toggle" href="#">Telephony and Unified
                                 Communication</a>
                             <ul class="dropdown-menu ">
-                                <li> <a class="dropdown-item" href="/unified.html"> Unified Communication</a>
+                                <li> <a class="dropdown-item" href="/companysite/unified.html"> Unified Communication</a>
                             </ul>
 
                         </li>
-                        <li> <a class="dropdown-item" href="/hp.html">HP Series (EPABX) </a></li>
+                        <li> <a class="dropdown-item" href="/companysite/hp.html">HP Series (EPABX) </a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -207,7 +207,7 @@
             </ul>
             <div class="form-inline ml-auto">
                 <form class="form-inline  my-2 my-lg-0">
-                    <a href="/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
+                    <a href="/companysite/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
                 </form>
             </div>
         </div>
@@ -228,7 +228,7 @@
         <div class="d-flex justify-content-between">
             <div class="col">
                 <div class="card h-100">
-                    <a href="/MXB350pz.html">
+                    <a href="/companysite/MXB350pz.html">
                         <img src="images3\Nano_Printer_JPEG_MX_B450P_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -249,15 +249,15 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/MXB350wz.html">
-                        <img src="images3\Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200" height="300"
+                    <a href="/companysite/MXB350wz.html">
+                        <img src="images3/Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A4 Monochrome MFP</h5>
-                        <p><strong> Technical data of MX-B350WZ photocopier </strong> <a href="pdf\AR-6020V.pdf"
+                        <p><strong> Technical data of MX-B350WZ photocopier </strong> <a href="pdf/AR-6020V.pdf"
                                 title="MX-B350WZ" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -269,15 +269,15 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <a href="/ar6020DV.html">
-                        <img src="images1\AR_6023DV_slant.jpg" class="card-img-top" width="200" height="300"
+                    <a href="/companysite/ar6020DV.html">
+                        <img src="images1/AR_6023DV_slant.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 monochrome MFP </h5>
-                        <p><strong> Technical data of AR_6020DV photocopier </strong> <a href="pdf\AR-6020DV_BRO.pdf"
+                        <p><strong> Technical data of AR_6020DV photocopier </strong> <a href="pdf/AR-6020DV_BRO.pdf"
                                 title="AR_6020DV" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
                         </p>
 
@@ -287,14 +287,14 @@
             <div class="clearfix"></div><br>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/ar6020nv.html">
-                        <img src="images1\AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300" alt="Responsive image" />
+                    <a href="/companysite/ar6020nv.html">
+                        <img src="images1/AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300" alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Monochrome MFP</h5>
-                        <p><strong> Technical data of AR_6020NV photocopier </strong> <a href="pdf\AR-6020NV.pdf"
+                        <p><strong> Technical data of AR_6020NV photocopier </strong> <a href="pdf/AR-6020NV.pdf"
                                 title="AR_6031NV" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
                         </p>
                     </div>
@@ -308,17 +308,17 @@
         <div class="d-flex justify-content-between">
             <div class="col">
                 <div class="card h-100">
-                    <a href="/MX2651.html">
-                        <img src="images3\MX_2651_LSITING_PAGE.jpg" class="card-img-top" width="200" height="300"
+                    <a href="/companysite/MX2651.html">
+                        <img src="images3/MX_2651_LSITING_PAGE.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Colour </h5>
                         <p>
                         <p><strong> Technical data of MX_2651 photocopier </strong><a
-                                href="pdf\MX-6051-5051-4051-3551-3051-2651.pdf" title="MX_2651" target="_blank"
+                                href="pdf/MX-6051-5051-4051-3551-3051-2651.pdf" title="MX_2651" target="_blank"
                                 class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -328,15 +328,15 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/MX3560V.html">
+                    <a href="/companysite/MX3560V.html">
                         <img src="images3\MX_3560V_FN29_slant.jpg" class="card-img-top" width="200" height="300"
-                            href="/MX3560.html" class="thumbnails" alt="Responsive image" />
+                            alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Business Color MFP </h5>
-                        <p><strong> Technical data of MX-3560V photocopier </strong> <a href="pdf\MX-3560_3060V_BRO_RV3.pdf"
+                        <p><strong> Technical data of MX-3560V photocopier </strong> <a href="pdf/MX-3560_3060V_BRO_RV3.pdf"
                                 title="MX-3560V" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -347,15 +347,15 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <a href="/MX4070V.html">
-                        <img src="images3\MX_4070V_FN31_full_front.jpg" class="card-img-top" width="200" height="300"
+                    <a href="/companysite/MX4070V.html">
+                        <img src="images3/MX_4070V_FN31_full_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Business advanced colour MFP</h5>
                         <p><strong> Technical data of MX-4070V photocopier </strong> <a href="pdf\MX-4070V_BRO.pdf"
                                 title="MX-3560V" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
