--- a/printers.html
+++ b/printers.html
@@ -220,7 +220,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="/images1/p1.jpg"
+                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images1/p1.jpg"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -240,7 +240,7 @@
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg 
-mx-auto" width="400" height="200" src="/images1/p2.jpg" class="img-fluid">
+mx-auto" width="400" height="200" src="images1/p2.jpg" class="img-fluid">
             </div>
         </div>
   <a class="nav-link" href="/companysite/index.html"><h3 class="text-dark">Back</h3> </a>
