--- a/businessprinters.html
+++ b/businessprinters.html
@@ -220,8 +220,8 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
 
-                <li class="breadcrumb-item"><a class="black-text" href="/companysite/office.html">Office Solutions</a></li>
-                <li class="breadcrumb-item"><a class="black-text" href="/companysite/printers.html">Printers</a></li>
+                <li class="breadcrumb-item"><a class="black-text" href="/companysite/printers.html">Office Solutions</a></li>
+                <li class="breadcrumb-item"><a class="black-text" href="/companysite/businessprinters.html">Printers</a></li>
                 <li class="breadcrumb-item active">Printers</li>
             </ol>
         </nav>
