--- a/wfc5790.html
+++ b/wfc5790.html
@@ -213,7 +213,15 @@
         </div>
     </nav>
 
+<div class="container my-4">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb ">
 
+                <li class="breadcrumb-item"><a class="black-text" href="/companysite/printers.html">Office Solutions</a></li>
+                <li class="breadcrumb-item"><a class="black-text" href="/companysite/businessprinters.html"> Business Printers</a></li>
+                <li class="breadcrumb-item active"> WF-C20590</li>
+            </ol>
+        </nav>
 
         
         <div class="row featurette d-flex justify-content-center align-items-center">
@@ -273,6 +281,7 @@
                 <a class="nav-link" href="/companysite/businessprinters.html"><h3 class="text-dark">Back</h3> </a>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Optional JavaScript -->
