--- a/businessprinters.html
+++ b/businessprinters.html
@@ -267,7 +267,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/wfm5799.html">
+                    <a href="/companysite/wfm5799.html">
                         <img src="images2/wf-m5799_hero-paper_690x460.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
