--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </ul>
             <div class="form-inline ml-auto">
                 <form class="form-inline  my-2 my-lg-0">
-                    <a href="/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
+                    <a href="/companysite/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a>
                 </form>
             </div>
         </div>
