--- a/car.html
+++ b/car.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+ <link rel="stylesheet" href="css\pop.css">
 
     <link rel="stylesheet" href="css/bootnavbar.css">
 
@@ -220,7 +220,7 @@
         <div class="carousel-inner">
             <div class="carousel-item-active">
                 <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400"
-                    src="images\car-air-purifier-a.jpg" class="img-fluid">
+                    src="images1\car-air-purifier-a.jpg" class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h1>Car Air Purifiers</h1>
