--- a/xray.html
+++ b/xray.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | Air purifiers | Home </title>
+    <title>THE STELLAR |Health Care|X-Ray </title>
 </head>
 
 <body>
