--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <li> <a class="dropdown-item" href="/companysite/xray.html"> X-Ray Machines </a></li>
                                 <li> <a class="dropdown-item" href="/companysite/medical.html"> Medical Equipments and ECP Machines
                                     </a></li>
-                                <li> <a class="dropdown-item" href="/sono.html"> Sonography Machines </a></li>
+                                <li> <a class="dropdown-item" href="/companysite/sono.html"> Sonography Machines </a></li>
                             </ul>
                         </li>
                         <li><a class="dropdown-item dropdown-toggle" href="#"> Covid 19</a>
@@ -156,7 +156,7 @@
 
                         <li><a class="dropdown-item dropdown-toggle" href="#">Business Solution</a>
                             <ul class="dropdown-menu ">
-                                <li> <a class="dropdown-item" href="/portal.html">Internet and Intranet portel
+                                <li> <a class="dropdown-item" href="/companysite/portal.html">Internet and Intranet portel
                                         development</a>
                                 </li>
                             </ul>
