--- a/AA1.html
+++ b/AA1.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <titleStellar | ESDS Sofware | Covid-19 Testing Solutions</title>
+    <title>Stellar | ESDS Sofware | Covid-19 Testing Solutions</title>
 </head>
 
 <body>
