--- a/self.html
+++ b/self.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <titleStellar | ESDS Sofware | Covid-19 Testing Solutions</title>
+    <title>Stellar | ESDS Sofware | Covid-19 Testing Solutions</title>
 </head>
 
 <body>
@@ -217,7 +217,7 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            >
+            
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
