--- a/safe.html
+++ b/safe.html
@@ -19,7 +19,7 @@
 
     <script src="/path/to/slick.js"></script>
 
-    <title>Steller|Covid Solutions|Kiosk Solutins|Self check Solutions</title>
+    <title>Steller|Covid Solutions|Kiosk Solutins|UR Safe Solu</title>
 </head>
 
 <body>
@@ -263,7 +263,7 @@
             <div class="col-md-6">
                 <div class="w3-container w3-center w3-animate-right">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="400" height="300"
-                        src="images/handy.jpg" class="img-fluid">
+                        src="images1/handy.jpg" class="img-fluid">
                 </div>
 
             </div>
@@ -281,14 +281,14 @@
 
                 <p> <a href="pdf/UV Room Sanitisation (1).pdf" title="Healthy Standee solution " target="_blank"
                         class="btn btn-small" href="#">
-                        <img src="images/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
                 </p>
             </div>
             <div class="col-md-6 order-md-1">
                 <div class="w3-container w3-center w3-animate-right">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="300"
-                        src="images/healthy standee.jpeg" class="img-fluid">
+                        src="images1 /healthy standee.jpeg" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -306,16 +306,16 @@
                 </ul>
                 <p> <a href="pdf/UV Room Sanitisation (1).pdf" title="UV Disinfection " target="_blank"
                         class="btn btn-small" href="#">
-                        <img src="images/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
                 </p>
             </div>
             <div class="col-md-5">
                 <div class="w3-container w3-center w3-animate-right">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="200"
-                        src="images/robo truck.jpeg" class="img-fluid">
+                        src="images2/robo truck.jpeg" class="img-fluid">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="200"
-                        src="images/tuck.jpeg" class="img-fluid">
+                        src="images2/tuck.jpeg" class="img-fluid">
                 </div>
 
             </div>
@@ -336,14 +336,14 @@
 
                 <p> <a href="pdf/Well Safe HVAC Air Tech (1).pdf" title="Well Safe HVAC Air Refinement" target="_blank"
                         class="btn btn-small" href="#">
-                        <img src="images/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
                 </p>
             </div>
             <div class="col-md-5 order-md-1">
                 <div class="w3-container w3-center w3-animate-right">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="300"
-                        src="images/No_Image_Available.png" class="img-fluid">
+                        src="images3/No_Image_Available.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -366,20 +366,20 @@
 
                 <p> <a href="pdf/WellSafe RoboTech (1).pdf" title="Well Safe HVAC Air Refinement" target="_blank"
                         class="btn btn-small" href="#">
-                        <img src="images/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
                 </p>
             </div>
             <div class="col-md-5 ">
                 <div class="w3-container w3-center w3-animate-right">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="200" height="100"
-                        src="images/uv indoor.jpg" class="img-fluid">
+                        src="images2/uv indoor.jpg" class="img-fluid">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="200" height="100"
-                        src="images/uv outdoor.jpg" class="img-fluid">
+                        src="images2/uv outdoor.jpg" class="img-fluid">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="200" height="100"
-                        src="images/uvfloor.jpg" class="img-fluid">
+                        src="images2/uvfloor.jpg" class="img-fluid">
                     <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="200" height="100"
-                        src="images/wall mounting.jpg" class="img-fluid">
+                        src="images2/wall mounting.jpg" class="img-fluid">
                 </div>
             </div>
         </div>
