--- a/wellsafeapp.html
+++ b/wellsafeapp.html
@@ -267,7 +267,7 @@
                             PDF</strong></a>
             </div>
         </div>
-        <a class="nav-link" href="/companysite/index.html">
+        <a class="nav-link" href="/companysite/">
             <h3 class="text-dark">Back</h3>
         </a>
     </div>
