--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark  bg-dark navbar-hover">
-        <a class="navbar-brand" href="/index.html">THE STELLAR</a>
+        <a class="navbar-brand" href="/companysite/">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
             <span class="navbar-toggler-icon"></span>
@@ -253,7 +253,7 @@
                 </div>
             </div>
 
-        <a class="nav-link" href="/comapanysite/index.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="nav-link" href="/comapanysite/"><h3 class="text-dark">Back</h3> </a>
     </div>
 
     
