--- a/careers.html
+++ b/careers.html
@@ -22,7 +22,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark  bg-dark navbar-hover">
-        <a class="navbar-brand" href="/companysite/index.html">THE STELLAR</a>
+        <a class="navbar-brand" href="/companysite/">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
             <span class="navbar-toggler-icon"></span>
