--- a/hp.html
+++ b/hp.html
@@ -321,10 +321,10 @@
                 
             </div>
             <div class="col-md-5">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="400" src="images/HP-308 new.jpg"
+                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="400" src="images3/HP-308 new.jpg"
                     class="img-fluid">
                 <p><strong> Technical data of HP-308 EPABX System </strong> <a href="pdf/HP-308-Data-Sheet.pdf"
-                        title="HP-308 EPABX System" target="_blank" class="btn btn-small" href="#"><img src="images4/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        title="HP-308 EPABX System" target="_blank" class="btn btn-small" href="#"><img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
                   </p> 
             </div>
@@ -738,10 +738,11 @@
                  <img  width="500" height="500"src="images3/hpr_tech.jpg" class="img-fluid" alt="Responsive image" class="rounded mx-auto d-block">
                     
             </div>
-<a class="nav-link" href="/companysite">
+
+    </div>
+    <a class="nav-link" href="/companysite">
             <h3 class="text-dark">Back</h3>
         </a>
-    </div>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
