--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/bootnavbar.css">
 
@@ -296,16 +297,12 @@
                     </div>
                 </div>
             </div>
-
         </form>
-
-        <div class="clearfix"></div><br>
+       <br>
         <!-- Footer -->
         <footer class="page-footer font-large ">
-
             <!-- Footer Elements -->
             <div class="container">
-
                 <!-- Social buttons -->
                 <ul class="list-unstyled list-inline text-center">
                     <p class="stay-connnected"><strong>STAY CONNECTED</strong></p>
@@ -336,12 +333,8 @@
                     </li>
                 </ul>
                 <!-- Social buttons -->
-
             </div>
             <!-- Footer Elements -->
-
-
-
         </footer>
         <!-- Footer -->
 
