--- a/contact.html
+++ b/contact.html
@@ -292,7 +292,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-muted">
-                            <strong>*</strong> These fields are required. Contact form template by
+                            <strong>*</strong> These fields are required. 
                         </p>
                     </div>
                 </div>
