--- a/xray.html
+++ b/xray.html
@@ -895,7 +895,7 @@
         </div>
         <br>
         <br>
-        <a class="nav-link" href="/companysite/index.html">
+        <a class="nav-link" href="/companysite/">
             <h3 class="text-dark">Back</h3>
         </a>
     </div>
