--- a/medical.html
+++ b/medical.html
@@ -453,7 +453,7 @@
                 <img width="400" height="300" src="images3\opg.jpg" class="img-fluid">
                 
             </div>
-            <a class="nav-link" href="/companysite/index.html">
+            <a class="nav-link" href="/companysite/">
                 <h3 class="text-dark">Back</h3>
             </a>
         </div>
