--- a/wireless.html
+++ b/wireless.html
@@ -228,7 +228,7 @@ mx-auto" width="400" height="200" src="images2/page.png" class="img-fluid">
     
     
    
-        <a class="nav-link" href="/companysite/about.html">
+        <a class="nav-link" href="/companysite/">
         <h3 class="text-dark">Back</h3>
     </a>
 
