--- a/Klean.html
+++ b/Klean.html
@@ -263,7 +263,7 @@
             </div>
 
         </div>
-        <a class="nav-link" href="/companysite/index.html"><h3 class="text-dark">Back</h3> </a>
+        <a class="nav-link" href="/companysite/"><h3 class="text-dark">Back</h3> </a>
        
     </div>
 </body>
