--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Strategic Partnership
                     </a>
                     <ul class="dropdown-menu ">
@@ -192,7 +192,7 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link disabled" href="#"tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Services</a>
                     <ul class="dropdown-menu ">
                         <li> <a class="dropdown-item" href="#">Consulting</a></li>
