--- a/events.html
+++ b/events.html
@@ -179,7 +179,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         Strategic Partnership
                     </a>
@@ -191,8 +191,8 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Services</a>
                     <ul class="dropdown-menu ">
                         <li> <a class="dropdown-item" href="#">Consulting</a></li>
