--- a/printers.html
+++ b/printers.html
@@ -179,8 +179,8 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Strategic Partnership
                     </a>
                     <ul class="dropdown-menu ">
@@ -191,8 +191,8 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Services</a>
                     <ul class="dropdown-menu ">
                         <li> <a class="dropdown-item" href="#">Consulting</a></li>
@@ -243,7 +243,7 @@
 mx-auto" width="400" height="200" src="images1/p2.jpg" class="img-fluid">
             </div>
         </div>
-  <a class="nav-link" href="/companysite/index.html"><h3 class="text-dark">Back</h3> </a>
+  <a class="nav-link" href="/companysite/"><h3 class="text-dark">Back</h3> </a>
         <div class="clearfix"></div><br>
     </div>
 </body>
