--- a/air.html
+++ b/air.html
@@ -179,8 +179,8 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true"id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Strategic Partnership
                     </a>
                     <ul class="dropdown-menu ">
@@ -191,8 +191,8 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Services</a>
                     <ul class="dropdown-menu ">
                         <li> <a class="dropdown-item" href="#">Consulting</a></li>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
             </div>
-            <a class="nav-link" href="/companysite/index.html">
+            <a class="nav-link" href="/companysite/">
                 <h3 class="text-dark">Back</h3>
             </a>
         </div>
