--- a/sono.html
+++ b/sono.html
@@ -179,8 +179,8 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true"id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Strategic Partnership
                     </a>
                     <ul class="dropdown-menu ">
@@ -191,8 +191,8 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <a class="nav-link disabled" href="#"  tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Services</a>
                     <ul class="dropdown-menu ">
                         <li> <a class="dropdown-item" href="#">Consulting</a></li>
@@ -259,7 +259,7 @@
                 <img width="500" height="500" src="images2/ultrasound-machine-500x500.jpg" class="img-fluid">
             </div>
         </div>
-        <a class="nav-link" href="/companysite/index.html">
+        <a class="nav-link" href="/companysite/">
             <h3 class="text-dark">Back</h3>
         </a>
     </div>
