--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                        aria-expanded="true">
                         Products
                     </a>
 
@@ -78,7 +78,7 @@
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                        aria-expanded="true">
                         Solutions
                     </a>
 
@@ -180,7 +180,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         Strategic Partnership
                     </a>
                     <ul class="dropdown-menu ">
