--- a/contact.html
+++ b/contact.html
@@ -261,7 +261,7 @@
                                 data-error="Please specify your need."
                                 wtx-context="DCEE5A01-B623-48F6-AD80-B212A819DC02">
                                 <option value=""></option>
-                                <option value="Request quotation">Request quotation</option>
+                                <option value="Request quotation">Request for product quotation</option>
                                 <option value="Request order status">Request order status</option>
                                 <option value="Request copy of an invoice">Request copy of an invoice</option>
                                 <option value="Other">Other</option>
