--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
             </div>
 
         </div>
-    
+    </div>
 
    
     <div class="container my-4">
@@ -297,7 +297,7 @@
 <a class="nav-link" href="/companysite/">
                 <h3 class="text-dark">Back</h3>
             </div>
-
+        </div>
 
             
                 <footer class="container">
