--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="bd-placeholder-img" src="images2/8.jpg" class="img-fluid" width="1600" height="400">
+                <img class="bd-placeholder-img" src="images2/stellar.jpg" class="img-fluid" width="1600" height="400">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="carousel-caption text-left">
 
