--- a/about.html
+++ b/about.html
@@ -241,14 +241,8 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img  src="images2/stellar.jpg" class="img-fluid" width="1000" height="400" class="rounded mx-auto d-block">
-                <div class="row featurette d-flex justify-content-center align-items-center">
-                    <div class="carousel-caption text-left">
-
-                        <div class="clearfix"></div><br>
-
-                    </div>
-                </div>
+                <!--img  src="images2/stellar.jpg" class="img-fluid" width="1000" height="400" class="rounded mx-auto d-block">
+                <img src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="1000" height="400" alt="Responsive image">
             </div>
 
         </div>
