--- a/about.html
+++ b/about.html
@@ -234,6 +234,7 @@
             </div>
         </nav>
     </div>
+     
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -241,8 +242,10 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <!--img  src="images2/stellar.jpg" class="img-fluid" width="1000" height="400" class="rounded mx-auto d-block">
-                <img src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="1000" height="400" alt="Responsive image">
+                <img  src="images2/stellar.jpg" class="rounded mx-auto d-block"  width="1600" height="400" class="rounded mx-auto d-block " alt="Responsive image">
+                
+                <div class="row featurette d-flex justify-content-center align-items-center">
+                    <div class="carousel-caption text-left">
             </div>
 
         </div>
