--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
 
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images\e4.jpg"
+                        <img class="bd-placeholder-img" width="250" height="300" src="images1\e4.jpg"
                             alt="Resposive image">
                     </div>
                 </div>
@@ -291,7 +291,7 @@
 
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="250" height="300" src="images\news.jpg"
+                        <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg"
                             alt="Responsive image">
                     </div>
                 </div>
