--- a/about.html
+++ b/about.html
@@ -218,17 +218,17 @@
 
     <div class="container my-10">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/companysite/about.html">Our Company</a>
+            <a class="navbar-brand" href="/about.html">Our Company</a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/companysite/culture.html">Culture </a>
+                        <a class="nav-link" href="/culture.html">Culture </a>
 
 
                     </li>
                     <li class="nav-item active ">
-                        <a class="nav-link" href="/companysite/careers.html">Careers</a>
+                        <a class="nav-link" href="/careers.html">Careers</a>
                     </li>
 
                 </ul>
