--- a/culture.html
+++ b/culture.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootnavbar.css">
 
 
-    <title>THE STELLAR | About Us </title>
+    <title>THE STELLAR | Culture </title>
 </head>
 
 <body>
