--- a/about.html
+++ b/about.html
@@ -234,6 +234,7 @@
                 </ul>
             </div>
         </nav>
+    </div>  
      <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
