--- a/photocopier.html
+++ b/photocopier.html
@@ -231,7 +231,7 @@
         <div class="d-flex justify-content-between">
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/MXB350pz.html">
+                    <a href="/MXB350pz.html">
                         <img src="images3\Nano_Printer_JPEG_MX_B450P_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -252,7 +252,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/MXB350wz.html">
+                    <a href="/MXB350wz.html">
                         <img src="images3/Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -272,7 +272,7 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/ar6020DV.html">
+                    <a href="/ar6020DV.html">
                         <img src="images1/AR_6023DV_slant.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -290,7 +290,7 @@
             <div class="clearfix"></div><br>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/ar6020nv.html">
+                    <a href="/ar6020nv.html">
                         <img src="images1/AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300" alt="Responsive image" />
                     </a>
                     <div class="card-body">
@@ -311,7 +311,7 @@
         <div class="d-flex justify-content-between">
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/MX2651.html">
+                    <a href="/MX2651.html">
                         <img src="images3/MX_2651_LSITING_PAGE.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -331,7 +331,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/MX3560V.html">
+                    <a href="/MX3560V.html">
                         <img src="images3\MX_3560V_FN29_slant.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
@@ -350,7 +350,7 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <a href="/companysite/MX4070V.html">
+                    <a href="/MX4070V.html">
                         <img src="images3/MX_4070V_FN31_full_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
                     </a>
