--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark  bg-dark navbar-hover">
+    <nav class="navbar navbar-expand-md navbar-dark  bg-dark navbar-hover">
         <a class="navbar-brand" href="/index.html">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
@@ -274,13 +274,13 @@
                     <div class="col p-4 d-flex flex-column position-static">
 
                         <h4 class="mb-0">Events</h4>
-                        <div class="mb-1 text-muted"> Sep 08</div>
+                       
                         <p class="card-text mb-auto">Stellar are committed to business
                             excellence by integrating quality principles and methods throughout the company.
                         </p>
 
                     </div>
-                    <div class="col-auto d-none d-lg-block">
+                    <div class="col-auto d-none d-md-block">
                         <img class="bd-placeholder-img" width="250" height="300" src="images1\e4.jpg" alt="Resposive image">
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                     class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-200 position-relative">
                     <div class="col p-2 d-flex flex-column position-static">
                         <h4 class="mb-0">News Room</h4>
-                        <div class="mb-1 text-muted">Sep 19</div>
+                       
                         <p class="card-text mb-auto">Stellar has established strategic alliances with industry leaders
                             across
                             multiple technology domains, which effectively enables us to provide cross synergies to
@@ -299,7 +299,7 @@
                             end-to-end solutions, on time, on budget and on target.</p>
 
                     </div>
-                    <div class="col-auto d-none d-lg-block">
+                    <div class="col-auto d-none d-md-block">
                         <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg" alt="Responsive image">
                     </div>
                 </div>
