--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-md navbar-dark  bg-dark navbar-hover">
+    <nav class="navbar navbar-expand-md navbar-dark  bg-dark navbar-hover sticky-top">
         <a class="navbar-brand" href="/index.html">THE STELLAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHover"
             aria-controls="navbarDD" aria-expanded="false" aria-label="Navigation">
